# awesome-compose

./: .gitmodules  CONTRIBUTING.md  LICENSE  MAINTAINERS  Makefile  README.md  code-of-conduct.md  practice doc.txt  readme.md  webServerApiSettings.json
.github/: CODEOWNERS
.wasmtime/: README.md
alfresco/: README.md  compose.yaml
angular/: README.md  compose.yaml  docker-compose.yaml
apache-php/: README.md  docker-compose.yaml  docker-compose.yml
aspnet-api-postgresql/: .gitignore  README.md  aspnet-api-postgresql.sln  docker-compose.yml
aspnet-api-seq/: .gitignore  aspnet-api-seq.sln  docker-compose.yml
aspnet-mssql/: README.md  compose.yaml  docker-compose.yaml  test.bats
basic/: basic.yaml
caddy-fastapi/: .gitignore  README.md  docker-compose.yml
cscc/: README.md
django/: README.md  compose.yaml  docker-compose.yml
django-postgres/: Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
django-redis/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
drupal8-mysql/: README.md  docker-compose.yaml
elasticsearch-logstash-kibana/: README.md  docker-compose.yml  test.bats
extras/: Dockerfile  bashrc
fastapi/: Dockerfile  README.md  compose.yaml  docker-compose.yml  requirements.txt
flask/: README.md  compose.yaml  docker-compose.yml
flask-redis/: Dockerfile  README.md  app.py  compose.yaml  docker-compose.yml
gitea-postgres/: README.md  compose.yaml  docker-compose.yaml  test.sh
go-mysql-redis/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  makefile
graylog/: .env.example  README.md  compose.yaml
laravel/: README.md  docker-compose.yml
laravel-nginx-mysql-redis/: README.md  SECURITY.md  docker-compose.yml
lib/: test_helper.bash
localstack/: .gitignore  README.md  compose.yml  setup-resources.sh
minecraft/: README.md  docker-compose.yml
mongodb-angular-expressjs-nodejs/: README.md  compose.yaml
nestjs/: README.md  compose.yml
netdata/: README.md  compose.yaml
next/: README.md
nextcloud-postgres/: README.md  (+2 more)
react-rust-postgres/backend/: Cargo.toml  Dockerfile  readme.md
react-rust-postgres/backend/migrations/2020-03-26-084736_create_people/: down.sql  up.sql
react-rust-postgres/backend/src/: main.rs  postgres.rs  schema.rs  user.rs
wasmedge-kafka-mysql/etl/: Cargo.toml  Dockerfile
wasmedge-kafka-mysql/etl/src/: main.rs
wasmedge-mysql-nginx/backend/: Cargo.toml  Dockerfile
wasmedge-mysql-nginx/backend/src/: main.rs
(+1114 files in other folders)
