[package]
name = "react-rust-postgres"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
deadpool-postgres = "0.9.0"
env_logger = "^0.8"
log = "^0.4"
serde = "1.0"
serde_json = "1.0"
tokio-postgres = "^0.7"
tokio-postgres-migration = "^0.1"
